feat(reference): reference and cleaner demo